--- a/plantillatfg.tex
+++ b/plantillatfg.tex
@@ -913,8 +913,22 @@ Imaginemos que el usuario \textit{A} está editando la casilla 3 del documento, 
 
 Esta situación es dificil de resolver, porque se necesita que cada usuario pueda realizar las ejecuciones dentro del contexto que necesite, y, a su vez, que los espectadores puedan ver el progreso del notebook. Si se continua funcionando como hasta ahora, se podría hacer que cada usuario tuviera una instancia del notebook diferente, y asignar un \textit{kernel} a cada uno de ellos. De esta manera, cada usuario contaría con su contexto independiente, pero ¿cómo se mustra la información en tiempo real a los espectadores? ¿Y cómo se resuelven los conflictos que se puedan generar?, por ejemplo en el caso de que diferentes usuarios hayan modificado la misma celda. Estas preguntas no tienen una respuesta sencilla, por lo que se plantea la colaboración de dos o más usuarios simultáneos haciendo uso de un modelo diferente, en el cuál a cada usuario se le deja modificar únicamente una casilla en cada momento.
 
+De esta manera, el usuario con permisos de administración podría dar los permisos a casillas en concreto, haciendo que cada usuario solo pueda modificar una casilla a la vez. Para que no haya conflictos en la ejecución, se mantendrá una versión \textit{master} del \textit{notebook}. Esta versión será la guardada en disco, y la correcta en cada momento dado. A la hora de conocer el contexto con el que está trabajando, el usuario siempre tendrá como referencia esta versión \textit{master}. Para que se produzcan modificaciones en ella, el usuario con permisos de administración en el \textit{notebook} tiene que aceptar los cambios realizados por un editor en la casilla editada. Cuando se acepten, se actualizará la versión \textit{master}, y, de esta manera, se empujarán los cambios a todos los usuarios que estén editando, para que vean que el contexto ha cambiado y que les puede afectar.
 
+\begin{figure}[H]
+	\centering
+  	\includegraphics[width=0.9\textwidth]{mejora_ejecucion.png}
+  	\caption{Esquema del nuevo modelo de ejecución}
+  	\label{fig:new-exec}
+\end{figure}
 
+En la Figura \ref{fig:new-exec} se puede ver un esquema de este nuevo modelo de edición y ejecución de nuestra plataforma. Podemos apreciar la versión máster del notebook así como los diferentes colaboradores. Tambien podemos ver que aparece un elemento llamado \textit{connection bridge}, que será el encargado de interceptar los mensajes entre los notebooks y el \textit{kernel} y añadir los métodos \textit{Dill} \footnote{https://pypi.org/project/dill/} , que gestionarán los contextos. El funcionamiento del sistema es el siguiente:
+
+En primer lugar se tiene que realizar una ejecución del \textit{notebook master} para generar los contextos. En el caso de que el notebook sea nuevo y esté vacío no es necesario, porque no habrá contexto disponible. Este modelo de ejecución va a seguir la lógica de que el \textit{notebook} es lineal, es decir que las casillas inferiores siempre van a ejecutarse más tarde que la superiores. Al ejecutar el \textit{notebook master} completo, se mandan las casillas a ejecución una a una y en orden. Cada vez que el connection bridge reciba el código de una casilla, le insertará un método \textit{dill} de guardado y lo mandará a ejecutar. De esta manera, se almacenará el contexto de cada casilla en la array de contextos, que estará guardada en disco. 
+
+Después, el administrador compartirá una casilla, nombrando a un usuario editor. Cuando este usuario quiera realizar una ejecución de la casilla, se mandará el código a el \textit{connection bridge}, y éste aádirá el método de cargado \textit{dill} de la casilla anterior a la que se va a mandar a ejecutar. De esta manera, el \textit{kernel} cargará el contexto correspondiente y la casilla se ejecutará de forma consistente. El editopr puede hacer pruebas, porque el contexto siempre va a ser el de la casilla anterior en sus ejecuciones.
+
+Por último, cuando un editor termine con las modificaciones en su casilla, el administrador del notebook tiene que decidir si mantiene los cambios o los descarta. En el caso de descartar los cambios propuestos, no se tiene que realizar ninguna ejecución, porque los contextos se mantienen. Sin embargo, en el caso de aceptar estas modificaciones, se tienen que recalcular los contextos de las casillas posteriores, porque dependen de éste. En el momento en el que se acepten los cambios, se ejecutará desde la casilla cambiada hasta el final del documento.  En la primera casilla que se ejecute, el \textit{connection bridge} insertará el método \textit{dill} de carga al principio y el de guardado al final, para ejecutar las casillas en base al contexto correcto. El resto de casillas se ejecutarán con el método \textit{dill} de guardado al final. Para finalizar, se actualizarán los notebooks de los editores con un mensaje, avisando de que la versión \textit{master} ha cambiado, para que lo tengan en cuenta.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                GLOSARIO                                     %
